# satellite-forecast

./: .gitignore  README.md  clstm.ipynb  cnn3d.ipynb  crnn-refactoring.ipynb  crnn.ipynb  google_model.ipynb  process.ipynb  pyproject.toml  requirements.txt  setup.cfg  transformer.ipynb
.github/workflows/: tests.yml
data/: __init__.py  data.py  download.py  process.ipynb
src/satforecast/data/: data.py  viz.py
src/satforecast/modeling/: data_selection.py  model_selection.py  train.py
tests/modeling/: test_data_selection.py  test_model_selection.py
