[metadata]
name = satellite-forecast
description = Deep learning used to forecast satellite images from a series of historical images
author = Juan Manuel Lazaro Ruiz
license = MIT
license_files = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = satforecast
install_requires =
    numpy >= 1.23.5
    matplotlib >= 3.7.1
    torch >= 2.0.0
    scikit-image >= 0.20.0
    notebook >= 6.5.3
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.3.1

[options.package_data]
satforecast = py.typed

[flake8]
max-line-length = 80
